@@ -1,3 +1,4 @@
+/* -*- c-file-style: "gnu"; indent-tabs-mode: nil -*- */
 /*
  * Ruby Cairo Binding
  *
